--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <nav class="d-flex justify-content-center flex-wrap gap-2 mt-4" aria-label="Quick links">
                 <a href="https://namsogen.apk.com/" target="_blank" rel="noopener noreferrer" class="btn btn-dark btn-sm"><i class="fab fa-android me-1"></i>Download App</a>
                 <a href="https://t.me/ccgen_namsogen" target="_blank" rel="noopener noreferrer" class="btn btn-info text-white btn-sm"><i class="fab fa-telegram me-1"></i>Join Telegram</a>
-                <a href="#" id="donate-link" class="btn btn-success btn-sm"><i class="fas fa-heart me-1"></i>Donate to Keep Ad-Free</a>
+                <a href="https://www.patreon.com/14990205/join" id="donate-link" target="_blank" rel="noopener noreferrer" class="btn btn-success btn-sm"><i class="fas fa-heart me-1"></i>Donate to Keep Ad-Free</a>
             </nav>
         </div>
     </header>
