--- a/pt.html
+++ b/pt.html
@@ -123,7 +123,7 @@
             <nav class="d-flex justify-content-center flex-wrap gap-2 mt-4" aria-label="Links rápidos">
                 <a href="https://namsogen.apk.com/" target="_blank" rel="noopener noreferrer" class="btn btn-dark btn-sm"><i class="fab fa-android me-1"></i>Baixar App</a>
                 <a href="https://t.me/ccgen_namsogen" target="_blank" rel="noopener noreferrer" class="btn btn-info text-white btn-sm"><i class="fab fa-telegram me-1"></i>Junte-se ao Telegram</a>
-                <a href="#" id="donate-link" class="btn btn-success btn-sm"><i class="fas fa-heart me-1"></i>Doe para Manter Sem Anúncios</a>
+                <a href="https://www.patreon.com/14990205/join" id="donate-link" target="_blank" rel="noopener noreferrer" class="btn btn-success btn-sm"><i class="fas fa-heart me-1"></i>Doe para Manter Sem Anúncios</a>
             </nav>
         </div>
     </header>
