--- a/es.html
+++ b/es.html
@@ -15,10 +15,10 @@
     <meta property="og:image" content="https://namsogen.top/iconapp.png">
     <link rel="canonical" href="https://namsogen.top/es.html">
     <link rel="icon" type="image/png" href="iconapp.png"> 
-    <link rel="alternate" hreflang="en" href="https://namsogen.top/index.html" />
+    <link rel="alternate" hreflang="en" href="https://namsogen.top/" />
     <link rel="alternate" hreflang="pt" href="https://namsogen.top/pt.html" /> 
     <link rel="alternate" hreflang="es" href="https://namsogen.top/es.html" /> 
-    <link rel="alternate" hreflang="x-default" href="https://namsogen.top/index.html" /> 
+    <link rel="alternate" hreflang="x-default" href="https://namsogen.top/" />
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
