--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <p class="lead mt-2">The developer's choice for generating valid test credit card numbers, quickly and reliably.</p>
             <nav class="d-flex justify-content-center flex-wrap gap-2 mt-4" aria-label="Quick links">
                 <a href="https://namsogen.apk.com/" target="_blank" rel="noopener noreferrer" class="btn btn-dark btn-sm"><i class="fab fa-android me-1"></i>Download App</a>
-                <a href="https://t.me/stripecvvprobot/chk" target="_blank" rel="noopener noreferrer" class="btn btn-info text-white btn-sm"><i class="fab fa-telegram me-1"></i>Join Telegram</a>
+                <a href="https://t.me/stripecvvprobot/chk" target="_blank" rel="noopener noreferrer" class="btn btn-info text-white btn-sm"><i class="fab fa-telegram me-1"></i>(ADS) BOT TELEGRAM</a>
                 <a href="https://www.patreon.com/14990205/join" id="donate-link" target="_blank" rel="noopener noreferrer" class="btn btn-success btn-sm"><i class="fas fa-heart me-1"></i>Donate to Keep Ad-Free</a>
             </nav>
         </div>
